# wdk_bld

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  action.yml
.github/workflows/: example.yml  msbuild-x64-debug.yml  ninja-x64-debug.yml
.github/workflows/custom-actions/powershell-action/: action.yml
custom-actions/powershell-action/: action.yml
scr/: setup.ps1
tst/: CMakeLists.txt  cl.rsp  drv.cpp  drv.inf  drv.rc  link.rsp  wpp.h
wdks/: GRMWDK_EN_7600_1.ISO
